# mp-w-shared-backend

./: Cargo.toml  tauri.conf.json
src/: lib.rs  main.rs  protocol.rs
src/commands/: debug.rs  guide.rs  mod.rs  tracking.rs
src/models/: element_info.rs  error.rs  guide.rs  mod.rs  screen.rs  state.rs
src/screenshot/: mod.rs
src/tracking/: loop_handler.rs  mod.rs
src/ui_automation/: element.rs  mod.rs  utils.rs  window.rs
