[package]
name = "matapass"
version = "0.1.0"
description = "Transform complex workflows into step-by-step guides with AI"
authors = ["you"]
edition = "2021"

[lib]
name = "tauriguidecreator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
once_cell = "1.8"
tauri = { version = "1.5", features = [ "fs-all", "window-start-dragging"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
screenshots = "0.8.5"
parking_lot = "0.12"
base64 = "0.21.5"
image = "0.24.7"
windows = { version = "0.48", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Ole",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

